This will allow Kleopatra to set the key origin when importing keys that were looked up via WKD.
Description
Description
Revisions and Commits
Revisions and Commits
rM GPGME | |||
rM3e81a4a336e0 qt: Avoid test failure when test is run multiple times | |||
rMfd680254dae5 core: Set --key-origin option only if supported by gpg | |||
rMfd6bec617d8f qt: Allow setting key origin when importing keys | |||
rM60880adafa93 core: Allow specifiying a key origin when importing keys |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | • ikloecker | T5334 Kleopatra: Add more support for WKS / WKD | ||
Resolved | • ikloecker | T5733 gpgme: Allow setting key origin when importing keys from data |