src/context.h
@@ -177,6 +177,9 @@ struct gpgme_context
   /* The optional expiration date of a certification.  */
   char *cert_expire;
 
+  /* The optional key origin.  */
+  char *key_origin;
+
   /* The operation data hooked into the context.  */
   ctx_op_data_t op_data;
 
