src/import.c
@@ -282,7 +282,7 @@ _gpgme_op_import_start (gpgme_ctx_t ctx, int synchronous, gpgme_data_t keydata)
 
   _gpgme_engine_set_status_handler (ctx->engine, import_status_handler, ctx);
 
-  return _gpgme_engine_op_import (ctx->engine, keydata, NULL);
+  return _gpgme_engine_op_import (ctx->engine, keydata, NULL, ctx->key_origin);
 }
 
 
@@ -365,7 +365,7 @@ _gpgme_op_import_keys_start (gpgme_ctx_t ctx, int synchronous,
 
   _gpgme_engine_set_status_handler (ctx->engine, import_status_handler, ctx);
 
-  return _gpgme_engine_op_import (ctx->engine, NULL, keys);
+  return _gpgme_engine_op_import (ctx->engine, NULL, keys, ctx->key_origin);
 }
 
 
